[drm:dsi_cmds2buf_tx] *ERROR* wait for video done timed out
actually two issues on v6.5 with wormdingler panel
[ +0.010660] panel-boe-tv101wum-nl6 ae94000.dsi.0: failed to write command 0[ +0.000010] panel-boe-tv101wum-nl6 ae94000.dsi.0: failed to init panel: -22
which is solved with by adding boe->base.prepare_prev_first = true;
But still getting a wall of
[ +0.079955] msm_dsi ae94000.dsi: [drm:dsi_cmds2buf_tx] *ERROR* wait for video done timed out